--- a/WebContent/resource/css/insert.css
+++ b/WebContent/resource/css/insert.css
@@ -6,20 +6,23 @@
 }
 
 .inserttable{
+	margin-top : 50px;
 	text-align : center;
-	width : 70%;
+	width : 50%;
 	margin-right:auto;
 	margin-left:auto;
 	margin-bottom : 100px;
 	padding-left:50px;
 	padding-right:50px;
 	border-spacing: 30px;
+	border-collapse: collapse;
 
 }
 
-.inserttable tr,td{
+.inserttable tr:not(:last-child) td{
 	padding-top : 5px;
 	padding-bottom : 5px;
+	border : 1px solid gray;
 }
 
 .insertname{
@@ -39,13 +42,18 @@
 }
 
 .insertbtn{
-	height : 40px;
+	height : 50px;
 	width : 40%;
 	margin-left : auto;
 	margin-right : auto;
 	background-color : black;
 	color : white;
 	font-size : 20px;
-	margin-top : 10px;
+	margin-top : 50px;
 	margin-bottom : 10px;
+}
+
+.insertbtn:hover{
+	cursor:pointer;
+	color : gray;
 }
