--- a/WebContent/resource/css/login.css
+++ b/WebContent/resource/css/login.css
@@ -53,11 +53,21 @@ body{
 }
 
 .input{
-	font-size : 20px;
+	font-size : 18px;
 	height : 25px;
 	padding-left : 5px;
 	padding-top:3px;
 	padding-bottom:3px;
+	width : 80%;
+}
+
+.inputid{
+	font-size : 18px;
+	height : 25px;
+	padding-left : 5px;
+	padding-top:3px;
+	padding-bottom:3px;
+	width : 50%;
 }
 
 .signupradio{
