--- a/WebContent/resource/css/sales.css
+++ b/WebContent/resource/css/sales.css
@@ -20,6 +20,7 @@
 	width: 300px;
 	height: 350px;
 	margin-left: 30px;
+	overflow: auto;
 }
 
 .sales_three {
@@ -38,6 +39,7 @@
 	border: none;
 	border-collapse: collapse;
 }
+
 .salestable th {
 	font-size : 20px;
 	font-weight: bold;
